WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279173
WebCodecs VideoDecoder should not have a pending activity in case of reordered frames
https://bugs.webkit.org/show_bug.cgi?id=279173
Summary
WebCodecs VideoDecoder should not have a pending activity in case of reordere...
youenn fablet
Reported
2024-09-05 01:02:03 PDT
WebCodecs VideoDecoder should not have a pending activity in case of reordered frames
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-05 01:03:07 PDT
<
rdar://problem/135328429
>
youenn fablet
Comment 2
2024-09-05 01:10:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33169
EWS
Comment 3
2024-09-16 01:18:25 PDT
Committed
283694@main
(29719316bdaa): <
https://commits.webkit.org/283694@main
> Reviewed commits have been landed. Closing PR #33169 and removing active labels.
EWS
Comment 4
2024-10-07 09:39:55 PDT
Committed
283286.212@safari-7620-branch
(f346633287fe): <
https://commits.webkit.org/283286.212@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1975 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug